window width fix on mobile #test3

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,7 +17,7 @@ body {
 html,
 body {
   @include respond(phone){
-    zoom: 80%;
+    zoom: 70%;
   }
 }
 
