--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,7 +37,7 @@ body {
 @media (max-width: 37.5em) {
   html,
   body {
-    zoom: 80%;
+    zoom: 70%;
   }
 }
 
